# graphql-rs

./: .env  Cargo.toml  Dockerfile  Procfile  Rocket.toml
migrations/: api.sql  authentication.sql  host.sql  policies.sql  scopes.sql  seed.sql
src/: graphql.rs  main.rs  posts.rs
src/graphql/: cookies.rs  mod.rs
