[package]
name = "gratico-graphql"
version = "0.1.1"
authors = ["abhishiv <abhishiv@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres" ] }
async-graphql = "2.0"
cookie = {version = "0.15", features = ["secure", "percent-encode"]}
async-graphql-warp = "2.0" # If you need to integrate into warp
warp = "0.3"
tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread"] }
